--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,13 +32,17 @@ android {
 }
 
 dependencies {
+    def room_version = "2.4.3"
+    def camerax_version = '1.1.0-beta01'
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
-    def camerax_version = '1.1.0-beta01'
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
     implementation "androidx.camera:camera-core:$camerax_version"
     // CameraX Camera2 extensions
     implementation "androidx.camera:camera-camera2:$camerax_version"
