--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:theme="@style/AppTheme" android:name=".ui.activity.CameraActivity"/>
+        <activity android:name=".ui.activity.AnimateActivity" />
+        <activity android:theme="@style/AppTheme" android:name=".ui.activity.CameraActivity" />
     </application>
 
 </manifest>
