--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,11 +20,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Animate"
+        android:theme="@style/AppTheme"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".ui.activity.LaunchActivity"
+            android:exported="true"
+            android:theme="@style/Launcher">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,8 +33,9 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".MainActivity" />
         <activity android:name=".ui.activity.AnimateActivity" />
-        <activity android:theme="@style/AppTheme" android:name=".ui.activity.CameraActivity" />
+        <activity android:theme="@style/CameraTheme" android:name=".ui.activity.CameraActivity" />
     </application>
 
 </manifest>
