--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,9 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".ui.activity.AnimateActivity" />
         <activity android:theme="@style/CameraTheme" android:name=".ui.activity.CameraActivity" />
+
+        <activity android:name=".ui.activity.DemoActivity"/>
+
     </application>
 
 </manifest>
