--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
         <activity android:name=".ui.activity.AnimateActivity" />
         <activity android:theme="@style/CameraTheme" android:name=".ui.activity.CameraActivity" />
         <activity android:name=".ui.activity.WebActivity" android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"/>
-        <activity android:name=".ui.activity.DemoActivity"/>
+        <activity android:name=".ui.activity.GalleryActivity"/>
 
     </application>
 
